docs/apache-airflow-providers-google/10.16.0/_sources/_api/airflow/providers/google/cloud/triggers/vertex_ai/index.rst.txt
:py:mod:`airflow.providers.google.cloud.triggers.vertex_ai`
===========================================================

.. py:module:: airflow.providers.google.cloud.triggers.vertex_ai


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.triggers.vertex_ai.CreateHyperparameterTuningJobTrigger




.. py:class:: CreateHyperparameterTuningJobTrigger(conn_id, project_id, location, job_id, poll_interval, impersonation_chain = None)


   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   CreateHyperparameterTuningJobTrigger run on the trigger worker to perform create operation.

   .. py:attribute:: statuses_success

      

   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).


   .. py:method:: run()
      :async:

      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



